crates/ridge-parser/tests/fixtures/errors/p013_deferred_class.rg
-- expect: P013
-- Trigger: `class` keyword is reserved/deferred to 0.2.0.
class Eq a = unit
